Build and Dockerfile improvements