@@ -6,6 +6,7 @@ plugins {
 }
 
 group 'io.university.aggregator'
+version '1.0.0'
 
 repositories {
     mavenCentral()
@@ -18,8 +19,16 @@ repositories {
     }
 }
 
-bootJar {
-    mainClassName = 'io.university.aggregator.AppStarter'
+bootRun {
+    main = 'io.university.aggregator.AppStarter'
+
+    args = ["--add-modules=java.xml.bind"]
+
+    environment([
+            "ORA_USER": System.getenv("ORA_USER") ?: "sys as sysdba",
+            "ORA_PASS": System.getenv("ORA_PASS") ?: "Oradoc_db1",
+            "ORA_URL" : System.getenv("ORA_URL") ?: "jdbc:oracle:thin:@localhost:32769:ORCLCDB"
+    ])
 }
 
 dependencies {
@@ -29,7 +38,7 @@ dependencies {
     compile "io.springfox:springfox-swagger-ui:$swaggerVersion"
     compile "com.github.goodforgod:dummymaker:$dummymakerVersion"
     compile "com.oracle:ojdbc7:$ojdbcVersion"
-    testImplementation  "junit:junit:$junitVersion"
-    testImplementation  "org.springframework.boot:spring-boot-starter-test:$springVersion"
+    testImplementation "junit:junit:$junitVersion"
+    testImplementation "org.springframework.boot:spring-boot-starter-test:$springVersion"
 }
 
